navigation bar spacing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -35,10 +35,14 @@ ul {
     padding: 0;
     overflow:hidden;
 }
+
+li {
+    display:inline-block;
+}
 li a{
     margin:0 auto;
     display:block;
-    width: 220px;
+    width: 180px;
     font:normal 16px Arial, sans-serif;
     color:black	;
     text-align:center;
@@ -52,16 +56,15 @@ li a.active {
   background-color: white;
   color: #878787;
   font-weight: bold;
-  font:30px;
 }
 	
 li a:hover:not(.active){
         font-weight: bold;
         color: #878787;
 }
-li {
-    display:inline-block;
-}
+
+
+
 #menu {
     background-color:white;
 text-align:center;
